--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.4.1
+crispy-bootstrap5==0.6
 Django==3.2.8
 django-allauth==0.47.0
 django-countries==7.2.1
+django-crispy-forms==1.14.0
 oauthlib==3.1.1
 PyJWT==2.3.0
 python3-openid==3.2.0
